<resources>
    <string name="app_name">Material Design</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="sub_activity">SubActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="login">Login</string>
    <string name="third_activity">Third Activity</string>
    <string name="shahed_mohammad_hridoy">Shahed Mohammad Hridoy</string>
    <string name="nav_import">import</string>
    <string name="nav_gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="nav_tools">Tools</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="nav_header_desc">Navigation Header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
</resources>
